# vitalis

./: .gitignore  LICENSE  README.md  diff.txt  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: user-story.yml
.github/workflows/: ci-build-extractor-docker.yml  ci-cli-publish.yml  ci-cli.yml  ci-test-extractor.yml  publish.yml
analyzer/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
analyzer/models/: __init__.py  dependency.py  schemas.py
analyzer/services/: __init__.py  dependency_extractor.py  package_info.py  repo_health.py
analyzer/utils/: __init__.py  helpers.py
core/: models.py
docs/: json-schema.md
extractor/: Dockerfile  README.md  action.yml  cli.py  entrypoint.sh  models.py  requirements.txt  utils.py
extractor/extractor/: environment_yml.py  package_json.py  poetry_lock.py  pyproject_toml.py  requirements_txt.py
tests/: __init__.py  test_analyzer_main.py  test_analyzer_package_info_extended.py  test_analyzer_repo_health.py  test_analyzer_services.py  test_cli.py  test_extractors.py  test_utils.py
tests/example-projects/conda-project/: README.md  environment.yml
tests/example-projects/go-project/: go.mod  go.sum  main.go
tests/example-projects/node-project/: index.js  package-lock.json  package.json
tests/example-projects/python-project/: main.py  pyproject.toml  requirements.txt
